# open_all_json_files

./: .gitmodules  README.md
source/: CMakeLists.txt  main.cpp
source/include/: AllFilesOnDir.h
source/src/: AllFilesOnDir.cpp
